Search, export to pdf, pagination, permissions

--- a/templates/bitacora/note_search.html
+++ b/templates/bitacora/note_search.html
@@ -147,8 +147,8 @@
 
         });
         
-        $('#id_position1').select2();
-        $('#id_position2').select2();
+//        $('#id_position1').select2();
+  //      $('#id_position2').select2();
 
 	});
 </script>
