--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -42,7 +42,7 @@
 				       </div>
 				       <!-- Raised button with ripple -->
 						<button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored" style="width:100%" type="submit">
-						  Login
+						  Iniciar sesion
 						</button>
 
 				      <div class="ui error message"></div>
