--- a/templates/bitacora/note_search.html
+++ b/templates/bitacora/note_search.html
@@ -60,10 +60,8 @@
 
             <div class="field">
               <div class="field">
-                <label>Clasificacion de notas</label>
-                <div class="ui left icon input">
+                <label>Clasificacion de notas</label>                
                   {{form.annotations_tags}}
-                </div>
               </div>
             </div>
 
@@ -86,7 +84,7 @@
         {% include "bitacora/search_result.html" %}
 
     </div>
-</div>
+  </div>
 
 
       <div class="ui dimmer">
@@ -110,6 +108,7 @@
 
 <script type="text/javascript" charset="utf-8" async defer>
 	$(function() {
+      //$('select').dropdown();
 
         var fecha_i = UIkit.datepicker($("#initF"), {
         format:'DD/MM/YYYY',
