--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -2,6 +2,9 @@
 {% block main_menu %}		      	
   {% include "main/menus/login_menu.html" %}
 {% endblock main_menu %}
+{% block page_title %}
+	Inicio de sesion
+{% endblock page_title %}
 
 {% block content %}
   	{% load i18n %}  
