--- a/templates/accounts/user_profile.html
+++ b/templates/accounts/user_profile.html
@@ -5,11 +5,16 @@
 {% endblock main_menu %}
 
 {% block page_title %}
-	Cambio de Contraseña
+	Datos de usuario
 {% endblock page_title %}
 
 {% block content %}
 
+  <div class="ui breadcrumb" style="margin-left: 20px; margin-right: auto; ">
+    <a class="section">Cuenta</a>
+    <i class="right angle icon divider"></i>
+    <div class="active section">Datos de usuario</div>
+  </div>
 
   <div class="mdl-cell mdl-cell--12-col">
     <div class="ui container">
