--- a/templates/bitacora/note_search.html
+++ b/templates/bitacora/note_search.html
@@ -1,9 +1,13 @@
 {% extends "main/base.html" %}
 
-
 {% block main_menu %}		      	
   {% include "main/menus/main_menu.html" %}
 {% endblock main_menu %}
+
+{% block page_title %}
+Busqueda de notas
+{% endblock page_title %}
+
 
 {% block content %}
 
