--- a/templates/bitacora/notes_pdf.html
+++ b/templates/bitacora/notes_pdf.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Reporte de nota {{note.id}}</title>
+    <title>Reporte de notas</title>
 
     <style>
 
