--- a/templates/accounts/user_profile.html
+++ b/templates/accounts/user_profile.html
@@ -34,7 +34,7 @@
             <div class="field">
               <label>Nombres</label>
                <div class="ui left icon input">
-                <input type="text" placeholder="Escriba su nombres" value="{{user.first_name}}" name="first_name">
+                <input type="text" placeholder="Escriba sus nombres" value="{{user.first_name}}" name="first_name">
                 <i class="legal icon"></i>
               </div>
             </div>
