--- a/templates/bitacora/notes_pdf.html
+++ b/templates/bitacora/notes_pdf.html
@@ -5,7 +5,6 @@
     <title>Reporte de notas</title>
 
     <style>
-
 			@page { 
 				size: letter;
 				 @frame header_frame {           /* Static Frame */
@@ -34,7 +33,7 @@
 <table style="font-family: roboto; border-bottom: 1px solid #004D40; color:#004D40" id="header_content">
 	<tr style='font-size:16px'>
 		<th style="width:65% ; text-align:left">
-			<h5>Bitacora de incidentes operacionales ATC </h5>
+			<h5>Bitacora de novedades operacionales ATC </h5>
 		</th>
 		<th style="width:35%; text-align:right">
 			<h3><i>	 EAAI </i></h3>
