--- a/templates/main/open_note.html
+++ b/templates/main/open_note.html
@@ -1,5 +1,5 @@
 
-    <div class="ui modal">
+    <div class="ui modal  open_note_c">
       <div class="header">Abrir nota en bitacora</div>
       <div class="content">
 
